fix div jump on load

--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ nav {
     display: inline-flex;
     flex-wrap: wrap;
     margin: 5em auto auto;
+    height: 4em;
 }
 
 .header-link {
